--- a/src/sass/__colors.scss
+++ b/src/sass/__colors.scss
@@ -8,3 +8,7 @@ $dark-font-color: #45505e;
 
 $light-background-color: #fff7ee;
 $dark-background-color: #1e1e1e;
+
+// WITH ALPHA
+
+$alpha-dark-bg: rgba(30, 30, 30, 0.7);
