--- a/src/sass/__nav.scss
+++ b/src/sass/__nav.scss
@@ -52,11 +52,24 @@
 		text-decoration: none;
 		color: c.$light-font-color;
 		text-transform: uppercase;
+
+		transition: color 0.3s;
+		&:hover {
+			color: c.$main-color;
+		}
 	}
 }
 
 @media (min-width: 576px) {
 	.nav {
+		&__title {
+			font-size: 1.8rem;
+
+			p:first-of-type {
+				font-size: 2.6rem;
+			}
+		}
+
 		.hamburger {
 			display: none;
 		}
@@ -78,8 +91,38 @@
 }
 
 @media (min-width: 768px) {
+	.nav {
+		&__title {
+			font-size: 2rem;
 
+			p:first-of-type {
+				font-size: 2.8rem;
+			}
+		}
+
+		&__links {
+			display: flex;
+			gap: 4rem;
+		}
+
+		&__item {
+			padding: 2rem;
+		}
+	}
 }
 
 @media (min-width: 992px) {
+	.nav {
+		&__title {
+			font-size: 2.2rem;
+
+			p:first-of-type {
+				font-size: 3rem;
+			}
+		}
+
+		&__item {
+			padding: 3rem;
+		}
+	}
 }
