--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,10 @@
+/*
+Fonts:
+ font-family: "Life Savers", serif;
+ font-family: Arial, Helvetica, sans-serif;
+*/
+
 @use './_reset';
+@use './_components';
 @use './_nav';
 @use './_header';
