--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -16,3 +16,23 @@
 		color: c.$light-font-color;
 	}
 }
+
+@media (min-width: 576px) {
+	.button {
+		padding: 1.5rem 3rem;
+		font-size: 2rem;
+	}
+}
+
+@media (min-width: 768px) {
+	.button {
+		padding: 2rem 4rem;
+		font-size: 2.2rem;
+	}
+}
+@media (min-width: 992px) {
+	.button {
+		padding: 2.5rem 5rem;
+		font-size: 2.4rem;
+	}
+}
