--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -32,10 +32,27 @@
 	}
 }
 
+.section {
+	padding: 5rem 1rem;
+
+	&__heading {
+		color: c.$main-color;
+		text-transform: uppercase;
+		font-size: 2rem;
+	}
+}
+
 @media (min-width: 576px) {
 	.button {
 		padding: 1.5rem 3rem;
 		font-size: 2rem;
+	}
+
+	.section {
+		padding: 5rem 2rem;
+		&__heading {
+			font-size: 3rem;
+		}
 	}
 }
 
@@ -44,10 +61,28 @@
 		padding: 2rem 4rem;
 		font-size: 2.2rem;
 	}
+
+	.section {
+		&__heading {
+			font-size: 4rem;
+		}
+	}
 }
 @media (min-width: 992px) {
 	.button {
 		padding: 2.5rem 5rem;
 		font-size: 2.4rem;
+	}
+	.section {
+		padding: 10rem 2rem;
+		&__heading {
+			font-size: 5rem;
+		}
+	}
+}
+
+@media (min-width: 1440px) {
+	.section {
+		padding: 10rem 0;
 	}
 }
