--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -21,14 +21,21 @@
 	height: 60px;
 	width: 60%;
 	background-color: #fff;
+	transform: skew(-45deg);
 
 	&--right {
 		right: -50px;
-		transform: skew(-45deg);
 	}
 
 	&--bottom {
 		bottom: 0;
+	}
+	&--left {
+		left: -50px;
+	}
+
+	&--top {
+		top: 0;
 	}
 }
 
