--- a/src/sass/__about-me.scss
+++ b/src/sass/__about-me.scss
@@ -7,10 +7,11 @@
 	}
 
 	&__img {
-		margin: 2rem 0;
+		margin: 2rem;
 		float: right;
 		max-width: 600px;
 		width: 100%;
+		min-width: 200px;
 		border-radius: 50px;
 		border: 5px solid c.$main-color;
 	}
