--- a/src/sass/__achievments.scss
+++ b/src/sass/__achievments.scss
@@ -1,1 +1,112 @@
 @use './_colors' as c;
+
+.achievments {
+	position: relative;
+	min-height: 600px;
+	width: 100%;
+	overflow: hidden;
+	&__img {
+		position: absolute;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+		background-image: url('../img/achievmnet-demo.png');
+		background-size: cover;
+		background-position: center;
+	}
+
+	&__shadow {
+		position: absolute;
+		inset: 0;
+		background-color: c.$alpha-dark-bg;
+	}
+
+	.wrapper {
+		height: 100%;
+		padding: 3rem 0;
+		display: flex;
+		justify-content: center;
+		gap: 3rem;
+		flex-direction: column;
+	}
+
+	&__card {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 0.5rem;
+		font-size: 2rem;
+		color: c.$light-font-color;
+		text-shadow: 1px 1px 5px c.$text-shadow;
+		transition: transform 0.3s;
+		text-align: center;
+
+		i {
+			font-size: 3rem;
+		}
+
+		p:first-of-type {
+			font-size: 2rem;
+		}
+
+		p {
+			text-transform: uppercase;
+		}
+
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
+}
+
+@media (min-width: 576px) {
+	.achievments {
+		&__card {
+			font-size: 2rem;
+
+			p:first-of-type {
+				font-size: 3rem;
+			}
+
+			i {
+				font-size: 4rem;
+			}
+		}
+	}
+}
+@media (min-width: 768px) {
+	.achievments {
+		.wrapper {
+			align-items: center;
+			flex-direction: row;
+			justify-content: space-around;
+		}
+
+		&__card {
+			font-size: 3rem;
+
+			p:first-of-type {
+				font-size: 4rem;
+			}
+
+			i {
+				font-size: 5rem;
+			}
+		}
+	}
+}
+@media (min-width: 992px) {
+	.achievments {
+		&__card {
+			font-size: 4rem;
+
+			p:first-of-type {
+				font-size: 5rem;
+			}
+
+			i {
+				font-size: 6rem;
+			}
+		}
+	}
+}
