add car to stamps section

--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -22,6 +22,11 @@
 		width: 200px;
 		text-align: center;
 	}
+
+	&--active {
+		background-color: c.$main-color;
+		color: c.$light-font-color;
+	}
 }
 .white-block {
 	position: absolute;
