--- a/src/sass/__stamps.scss
+++ b/src/sass/__stamps.scss
@@ -1,3 +1,5 @@
+@use './_colors' as c;
+
 .stamps {
 	&__menu {
 		margin: 2rem 0;
@@ -5,5 +7,78 @@
 		justify-content: center;
 		flex-wrap: wrap;
 		gap: 2rem;
+	}
+
+	&__box {
+		margin: 0 auto;
+		position: relative;
+		max-width: 1000px;
+		border-radius: 12px;
+		overflow: hidden;
+	}
+
+	&__background {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+	}
+
+	&__background img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+
+	&__shadow {
+		position: relative;
+		background-color: c.$alpha-dark-bg;
+		z-index: 1;
+	}
+
+	&__text-box {
+		padding: 3rem;
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		color: c.$light-font-color;
+	}
+}
+
+@media (min-width: 576px) {
+	.stamps {
+		&__menu {
+			margin: 5rem 0;
+			gap: 1.5rem;
+		}
+
+		&__text-box {
+			h3 {
+				font-size: 3rem;
+			}
+
+			p {
+				font-size: 1.8rem;
+			}
+		}
+	}
+}
+@media (min-width: 768px) {
+	.stamps {
+		&__menu {
+			justify-content: left;
+		}
+
+		&__text-box {
+			h3 {
+				font-size: 3.5rem;
+			}
+
+			p {
+				font-size: 2.5rem;
+			}
+		}
 	}
 }
