--- a/src/sass/__stamps.scss
+++ b/src/sass/__stamps.scss
@@ -12,7 +12,7 @@
 	&__box {
 		margin: 0 auto;
 		position: relative;
-		max-width: 1000px;
+		max-width: 1400px;
 		border-radius: 12px;
 		overflow: hidden;
 	}
@@ -33,6 +33,8 @@
 	}
 
 	&__shadow {
+		display: flex;
+		justify-content: center;
 		position: relative;
 		background-color: c.$alpha-dark-bg;
 		z-index: 1;
@@ -41,7 +43,9 @@
 	&__text-box {
 		padding: 3rem;
 		display: flex;
+		align-items: center;
 		flex-direction: column;
+		max-width: 800px;
 		gap: 1rem;
 		color: c.$light-font-color;
 	}
