--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -32,7 +32,7 @@
 	position: absolute;
 	height: 60px;
 	width: 60%;
-	background-color: c.$white-background-color;
+	background-color: c.$light-background-color;
 	transform: skew(-45deg);
 	z-index: 100;
 
