--- a/src/sass/__stamps.scss
+++ b/src/sass/__stamps.scss
@@ -1,6 +1,8 @@
 @use './_colors' as c;
 
 .stamps {
+	position: relative;
+	overflow-x: hidden;
 	&__menu {
 		margin: 2rem 0;
 		display: flex;
@@ -11,6 +13,7 @@
 
 	&__box {
 		margin: 0 auto;
+		margin-bottom: 5rem;
 		position: relative;
 		max-width: 1400px;
 		border-radius: 12px;
