--- a/src/sass/__colors.scss
+++ b/src/sass/__colors.scss
@@ -9,6 +9,8 @@ $dark-font-color: #45505e;
 $light-background-color: #fff7ee;
 $dark-background-color: #1e1e1e;
 
+$nav-bg: rgb(17, 17, 17);
+
 // WITH ALPHA
 
 $alpha-dark-bg: rgba(30, 30, 30, 0.7);
