--- a/src/sass/__nav.scss
+++ b/src/sass/__nav.scss
@@ -5,7 +5,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
-	background-color: c.$alpha-dark-bg;
+	background-color: c.$nav-bg;
 
 	z-index: 1000;
 	&__title {
