make a basic structure of contact

--- a/src/sass/__colors.scss
+++ b/src/sass/__colors.scss
@@ -18,3 +18,8 @@ $alpha-dark-bg: rgba(30, 30, 30, 0.7);
 // SHADOW
 
 $text-shadow: #000;
+
+// STROKES
+
+$input-stroke: #9d9d9d;
+$input-stroke-focus: #555555;
