--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -26,6 +26,11 @@
 	&--active {
 		background-color: c.$main-color;
 		color: c.$light-font-color;
+		transition: color 0.3s, background-color 0.3s;
+		&:hover {
+			background: none;
+			color: c.$dark-font-color;
+		}
 	}
 }
 .block {
