fix some bugs related with buttons in stamps

--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -27,7 +27,8 @@
 		background-color: c.$main-color;
 		color: c.$light-font-color;
 		transition: color 0.3s, background-color 0.3s;
-		&:hover {
+		&:hover,
+		&:active {
 			background: none;
 			color: c.$dark-font-color;
 		}
