--- a/src/sass/__footer.scss
+++ b/src/sass/__footer.scss
@@ -4,7 +4,7 @@
 	padding: 2rem 0;
 	text-align: center;
 	width: 100%;
-	background-color: c.$dark-background-color;
+	background-color: c.$footer-bg;
 	color: c.$light-font-color;
 
 	span:first-of-type {
