--- a/src/sass/__contact.scss
+++ b/src/sass/__contact.scss
@@ -25,6 +25,7 @@
 		flex-direction: column;
 		width: fit-content;
 		gap: 3rem;
+		width: 100%;
 		div {
 			display: flex;
 			flex-wrap: wrap;
@@ -46,7 +47,6 @@
 			textarea {
 				padding: 1rem 2rem;
 				font-family: Arial, Helvetica, sans-serif;
-
 				border: 1px solid c.$input-stroke;
 				border-radius: 12px;
 				resize: vertical;
@@ -66,6 +66,7 @@
 				border: 1px solid c.$input-stroke;
 				border-radius: 12px;
 				resize: vertical;
+				max-width: 600px;
 
 				&:focus {
 					outline: none;
@@ -74,9 +75,9 @@
 			}
 		}
 		.textarea-box {
+			display: flex;
+			flex-direction: column;
 			width: 100%;
-			textarea {
-			}
 		}
 	}
 }
